# timer-event-generator

./: CMakeLists.txt  main.cpp
Timer/: CMakeLists.txt
Timer/header/: FileGuard.hpp  ThreadGuard.hpp  Timer.hpp
Timer/source/: Event.cpp  FileGuard.cpp  ThreadGuard.cpp  Timer.cpp
header/: Guard.hpp  ITimer.hpp  Timer.hpp
src/: Event.cpp  Guard.cpp  Timer.cpp
